cleaner design, finishes all reqs.

--- a/twittler.css
+++ b/twittler.css
@@ -3,22 +3,25 @@ footer, div {
 }
 
 body {
-    background-image: url('img-noise.png');
+    background-color: white;
+    width: 70%;
+   
+
+}
+
+main {
+	width: 80%;
+	margin: 0 auto;
 }
 
 
 
 .tweet{
 	
-    
-    margin: 5px;
+    width: 100%;
+    margin: 5px auto;
     padding: 10px; 
     
-    position: relative;
-    width: 30%;
-    
-    text-align: center;
-    padding:5px;
     border-style: groove;
     border-color: green;
    
@@ -26,60 +29,29 @@ body {
     background: radial-gradient(ellipse at center, rgba(242,246,248,1) 0%, rgba(216,225,231,1) 34%, rgba(181,198,208,1) 64%, rgba(224,239,249,1) 100%);
 }
 
+.msg {
+	text-align: right;
+	position: right;
+}
+
+.time{
+	text-align: center;
+}
+
+.link{
+	text-decoration: none;
+	font-color: blue;
+	font-weight: bold;
+}
+
+
 header h1 {
 	margin: 0 auto 0 auto;
-	background-color: red;
 	text-align: center;
 	font-size: 45px;
 	padding: 15px;
 	border-radius: 10px 10px 10px 10px;
-	background: radial-gradient(ellipse at center, rgba(252,236,252,1) 0%, rgba(251,166,225,1) 44%, rgba(253,137,215,1) 61%, rgba(255,124,216,1) 100%);
 }
-
-
-
-
-
-nav ul {
-	text-decoration: none;
-	text-align: center;
-	margin: 0 auto 0 auto;
-
-}
-
-nav li {
-	display: inline;
-	font-size: 20px;
-	
-	padding: 5px;
-	margin: 0 50px 0 50px;
-	font-color: red;
-	border-radius: 10px 10px 10px 10px;
-	background: radial-gradient(ellipse at center, rgba(179,220,237,1) 0%, rgba(41,184,229,1) 50%, rgba(188,224,238,1) 100%);
-
-}
-
-nav a {
-	text-decoration: none;
-	font-color: red;
-}
-main {
-	display: block;
-	position: relative;
-}
-
-footer {
-	width: 100%;
-	height: 50px;
-	padding: 10px;
-	position: flow;
-	bottom: 0;
-	left: 0;
-	background-color: grey;
-	border-radius: 10px 10px 10px 10px;
-}
-
-
 
 .clearfix:before,
 .clearfix:after {
